bootstrap tooltip and no jquery ui tooltip

--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 
 <!-- jquery ui -->
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <script type="text/javascript">
 //Solves naming conflicts between jquery ui and bootstrap
   $.widget.bridge('uitooltip', $.ui.tooltip);
   $.widget.bridge('uibutton', $.ui.button);
 </script>
+ -->
 <!-- Bootstrap tooltips -->
 <script type="text/javascript" src="js/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
