--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@ function addSuggestion(suggestion){
             <br>
             <!-- Defines the button and questioncircle displayed for the option "freestyle" -->
             <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
-            <label for="freestyle" style="margin-right:5px">On-demand avatar translation</label>
-            <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i>
+            <label for="freestyle" style="margin-right:5px"  data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed.">On-demand avatar translation</label>
+           <!--  <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i> -->
 
               <br>
               <br>
