--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 
 <!-- jquery ui -->
-<!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <script type="text/javascript">
 //Solves naming conflicts between jquery ui and bootstrap
   $.widget.bridge('uitooltip', $.ui.tooltip);
   $.widget.bridge('uibutton', $.ui.button);
 </script>
- -->
+
 <!-- Bootstrap tooltips -->
 <script type="text/javascript" src="js/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
@@ -445,7 +445,6 @@ function addSuggestion(suggestion){
             <!-- Defines the button and questioncircle displayed for the option "freestyle" -->
             <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
             <label for="freestyle" style="margin-right:5px"  data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed.">On-demand avatar translation</label>
-            <a href="#" class="fa fa-question" data-toggle="tooltip" data-placement="right" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></a>
            <!--  <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i> -->
 
               <br>
