--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@ function addSuggestion(suggestion){
               <input type="button" class="btn btn-primary" id="play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
               <input type="button" class="btn btn-primary undisplayed" id="freestyle" value="Translate" onclick='goPython(document.getElementById("mySiGML").value);' />
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
+              <input type="button" onclick="playText(document.getElementById('mySiGML').value);">
 
               <!-- <script type="text/python" src="test.py"></script> -->
               <!-- <button id="freestyle" onclick='goPython(document.getElementById("mySiGML").value);'>freestyle</button> -->
