allcsa.js nu in js folder

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 <!-- script for generating avatar animations -->
-<script type="text/javascript" src="cwa/allcsa.js"> </script>
+<script type="text/javascript" src="js/allcsa.js"> </script>
 
 
 <!-- =============================================== -->
