--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 <!-- script for generating avatar animations -->
-<script type="text/javascript" src="cwasa/uva/cwa/allcsa.js"> </script>
+<script type="text/javascript" src="cwasa/uva2020/cwa/allcsa.js"> </script>
 
 
 <!-- =============================================== -->
