nederlandse en engelse json dict

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ var json = (function() {
   $.ajax({
     'async': false,
     'global': false,
-    'url': "sentencesDict.json",
+    'url': "sentencesDictNL.json",
     'dataType': "json",
     'success': function(data) {
       json = data;
