--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 
 <!-- jquery ui -->
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 
 <script type="text/javascript">
 //Solves naming conflicts between jquery ui and bootstrap
