--- a/index.html
+++ b/index.html
@@ -49,24 +49,14 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 
 <!-- jquery ui -->
-<!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-<!-- <script type="text/javascript">
+<script type="text/javascript">
 //Solves naming conflicts between jquery ui and bootstrap
   $.widget.bridge('uitooltip', $.ui.tooltip);
   $.widget.bridge('uibutton', $.ui.button);
-</script> -->
+</script>
 
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="js/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-
-<!-- Grayscale theme JS-->
-<script type="text/javascript" src="js/grayscalescript.js"></script>
-<!-- Javascript for smooth scrolling-->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
 
 <!-- Autocomplete JS-->
@@ -667,7 +657,16 @@ function addSuggestion(suggestion){
 <!-- Javascripts -->
 
 <!-- Jquery JS is loaded in the beginning, see above -->
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="js/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
+
+<!-- Grayscale theme JS-->
+<script type="text/javascript" src="js/grayscalescript.js"></script>
+<!-- Javascript for smooth scrolling-->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
 
 </body>
