glosses worden nu ook gereturned

--- a/index.html
+++ b/index.html
@@ -478,6 +478,8 @@ function addSuggestion(suggestion){
               <br>
               Adjust speed: <span class="CWASASpeed av0" style="margin-bottom:5px"></span>
               <br>
+              Gloss:
+              <input class="txtGloss av0" value="[none]" type="text">
               <br>
 
               <label for="suggestions">Suggestions box: </label>
