--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ function addSuggestion(suggestion){
 
         <span id="videos" class="undisplayed" align="left">
           <!-- <iframe width="500" height="500" src="https://www.dropbox.com/s/p5b234zmcz2c7gd/AL_01_Goedemorgen.mp4?raw=1"></iframe> -->
-          <iframe src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+          <iframe width="500" height="500" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
         </span>
 
         <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
