--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ background-size: 40px 40px; background-image: url(data:image/svg+xml;utf8;base64
         <span id="videos" class="undisplayed" align="left">
           <!-- <iframe width="500" height="500" src="https://www.dropbox.com/s/p5b234zmcz2c7gd/AL_01_Goedemorgen.mp4?raw=1"></iframe> -->
           <!-- <iframe width="500" height="500" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw?rel=0&amp;showinfo=0&amp;autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe> -->
-          <iframe id="videoHolder" width="500" height="500" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw?rel=0&amp;showinfo=0&amp;autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+          <iframe id="videoHolder" width="500" height="500" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw?rel=0&amp;showinfo=0&amp;autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
         </span>
 
         <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
