--- a/index.html
+++ b/index.html
@@ -259,21 +259,36 @@ function changeFunc(myRadio) {
   }
 }
 
-//Makes an ajax call to a php file that runs the python script
-function phpCallPython(text){
+///Makes an ajax call to the python script (by way of a php wrapper)
+function callPython(text) {
+  showBusyState();
   $.ajax({
-       url : 'pythonCall.php',
-       type : 'POST',
-       data: {"input": text},
-       success : function (result) {
-          console.log (result);
-          playText(result);
-       },
-       error : function () {
-          console.log ('Something went wrong');
-       }
-     });
+    url : 'pythonCall.php',
+    type : 'POST',
+    data: {"input": text},
+    dataType: "json",
+    success : onSuccess,
+    error : onError,
+  });
+  function onSuccess(result) {
+    if (result.errorcode) {
+      console.log('Error '+result.errorcode+' occured on the server. Error message: '+result.error);
+    } else {
+      output = result.output.split(";");
+      glosses = output[1];
+      console.log(glosses)
+      playText(output[2].trim());
+    }
+    showBusyState(false);
   }
+  function onError(xhr, error) {
+    console.log ('Something went wrong. Error message: '+error);
+    showBusyState(false);
+  }
+  function showBusyState(state) {
+    $(document.body).toggleClass('busy', state===undefined?true:state);
+  }
+}
 
 function displayInfo(id){
   document.getElementById(id).setAttribute("class", "displayInfo");
@@ -508,7 +523,7 @@ background-size: 40px 40px; background-image: url(data:image/svg+xml;utf8;base64
 
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
-              <input type="button" class="btn btn-primary undisplayed" id="freestyle" value="Translate" onclick='phpCallPython(document.getElementById("mySiGML").value);' />
+              <input type="button" class="btn btn-primary undisplayed" id="freestyle" value="Translate" onclick='callPython(document.getElementById("mySiGML").value);' />
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
               <!-- <input type="button" value="avatar test" onclick="playText(document.getElementById('mySiGML').value);"> -->
 
