path verandering probeersel

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
 <!-- script for generating avatar animations -->
-<script type="text/javascript" src="cwasa/uva2020/cwa/allcsa.js"> </script>
+<script type="text/javascript" src="cwa/allcsa.js"> </script>
 
 
 <!-- =============================================== -->
@@ -532,6 +532,7 @@ background-size: 40px 40px; background-image: url(data:image/svg+xml;utf8;base64
               <br>
               <br>
               Adjust speed: <span class="CWASASpeed av0" style="margin-bottom:5px"></span>
+              <br>
               <br>
               Gloss:
               <input class="txtGloss av0" value="[none]" type="text">
