images in about section removed

--- a/index.html
+++ b/index.html
@@ -386,36 +386,36 @@ function addSuggestion(suggestion){
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section section-fixtotop bg-light" id="About">
+<section class="projects-section bg-white" id="About">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
             <div class="col-lg-6">
-                <div class="bg-black text-center h-100 project">
+                <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text w-100 my-auto text-center text-lg-right">
-                            <h4 class="text-white">Challenge</h4>
-                            <p class="mb-2 text-white-50">
+                        <div class="project-text w-100 my-auto text-center text-lg-left">
+                            <h4 class="text-black">Problem</h4>
+                            <p class="mb-3 text-black-50">
                             In times of COVID-19, it is very difficult for healthcare professionals to communicate with deaf patients.
                             Sign language interpreters are often not allowed to enter the hospital and face masks make lipreading impossible.
                             </p>
-                            <hr class="d-none d-lg-block mb-0 mr-0" />
+                            <hr class="d-none d-lg-block mb-0 ml-0" />
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-02.jpg" alt="" /></div>
-        </div>
+<!--             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-02.jpg" alt="" /></div>
+        </div> -->
         <!-- Approach Row-->
-        <div class="row justify-content-center no-gutters">
-            <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div>
+<!--         <div class="row justify-content-center no-gutters">
+            <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
             <div class="col-lg-6">
-                <div class="bg-black text-center h-100 project">
+                <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text w-100 my-auto text-center text-lg-left">
-                            <h4 class="text-white">Vision</h4>
-                            <p class="mb-0 text-white-50">
-                            This website translates sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
+                            <h4 class="text-black">How does this website help?</h4>
+                            <p class="mb-3 text-black-50">
+                            It allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
                             </p>
                             <hr class="d-none d-lg-block mb-0 ml-0" />
                         </div>
@@ -425,6 +425,8 @@ function addSuggestion(suggestion){
         </div>
     </div>
 </section>
+
+
 
 <!--================================================================-->
 
@@ -662,9 +664,9 @@ function addSuggestion(suggestion){
                   </div>
               </div>
           </div>
-          <div class="row">
+<!--           <div class="row">
                 <div class="col-xl-12"><img class="img-fluid" src="images/landscape.jpeg" alt="" /></div>
-          </div>
+          </div> -->
 </section>
 
 <!--================================================================-->
