--- a/index.html
+++ b/index.html
@@ -386,16 +386,16 @@ function addSuggestion(suggestion){
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section bg-white" id="About">
+<section class="projects-section bg-light" id="About">
     <div class="container">
         <!-- Challenge Row-->
-        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
             <div class="col-lg-6">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Problem</h4>
-                            <p class="mb-3 text-black-50">
+                            <p class="mb-1 text-black-50">
                             In times of COVID-19, it is very difficult for healthcare professionals to communicate with deaf patients.
                             Sign language interpreters are often not allowed to enter the hospital and face masks make lipreading impossible.
                             </p>
@@ -414,7 +414,7 @@ function addSuggestion(suggestion){
                     <div class="d-flex h-100">
                         <div class="project-text w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">How does this website help?</h4>
-                            <p class="mb-3 text-black-50">
+                            <p class="mb-1 text-black-50">
                             It allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
                             </p>
                             <hr class="d-none d-lg-block mb-0 ml-0" />
@@ -432,7 +432,7 @@ function addSuggestion(suggestion){
 
 <!-- Translate -->
 
-<section class="projects-section bg-light" id="Translate">
+<section class="projects-section bg-white" id="Translate">
     <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
