--- a/index-general.html
+++ b/index-general.html
@@ -365,8 +365,8 @@ function addSuggestion(suggestion){
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Demo</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Publications">Publications</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Funding</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Tutorial</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Funding">Funding</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Tutorial">Tutorial</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Resources</a></li>
                 <li class="nav-item"><a class="nav-link" href="index-nl.html">NL</a></li>
             </ul>
@@ -414,9 +414,9 @@ function addSuggestion(suggestion){
                     <h4>Our mission</h4>
                     <p class="mb-4">
                       We are pursuing deeper insights into sign language grammar, and we are using these insights to develop a machine translation system that can translate sentences from Dutch into Sign Language of the Netherlands (NGT), displayed by means of an animated avatar. We intend to apply this system in several settings, in particular to support parents of deaf children in the early stages of learning sign language and to 
-                      <a href="covid19/index.html" target="_blank">
+                      <b><a href="covid19/index.html" target="_blank">
                         improve communication between health care professionals and deaf patients.
-                      </a>
+                      </a></b>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div> 
             </div>
@@ -549,8 +549,6 @@ function addSuggestion(suggestion){
 
     <div class="container" height="100%">
 
-        <h2 class="mb-4 pl-5">People</h2>
-
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
             <!-- Column for Team -->
@@ -563,8 +561,9 @@ function addSuggestion(suggestion){
 
                     <h5>Principal investigator</h5>
                     <p class="text-black-50 mb-3">
-                      Floris Roelofsen, University of Amsterdam<br>
-                      Anika Smeijers, Amsterdam Medical Centre<br>
+                      <a href="https://www.florisroelofsen.com/" target="_blank">
+                        Floris Roelofsen</a>,
+                      University of Amsterdam<br>
                     </p>
 
                     <h5>
@@ -572,8 +571,8 @@ function addSuggestion(suggestion){
                     </h5>
                     
                     <p class="text-black-50 mb-3">
-                      Lyke Esselink (2020)<br>
-                      Shani Mende-Gillings (2020)<br>
+                      Lyke Esselink, University of Amsterdam<br>
+                      Shani Mende-Gillings, University of Amsterdam<br>
                     </p>
 
                     <h5>
@@ -608,7 +607,7 @@ function addSuggestion(suggestion){
                     <p class="text-black-50 mb-3">
                       Beppie van den Bogaerde, University of Amsterdam<br>
                       Onno Crasborn, University of Nijmegen<br>
-                      <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>
+                      <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>,
                         University of Geneva<br>
                       Roland Pfau, University of Amsterdam<br>
                       <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a>, University of East Anglia<br>
@@ -626,7 +625,24 @@ function addSuggestion(suggestion){
 
 <!--================================================================-->
 
-<!-- Resources section -->
+<!-- Publications section -->
+<section class="projects-section bg-white" id="Publications">
+
+      <div class="container" height="100%">
+          <div class="project-text pt-0 text-lg-left">
+              <h2>Publications</h2>
+              <p class="text-black-50 mb-0">
+                To be added.
+              </p>
+              <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
+          </div>
+      </div>
+
+</section>
+
+<!--================================================================-->
+
+<!-- Funding section -->
 <section class="projects-section bg-white" id="Funding">
 
       <div class="container" height="100%">
@@ -636,13 +652,29 @@ function addSuggestion(suggestion){
                 We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
                 <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
               </p>
-              <hr class="d-none d-lg-block mb-0 ml-0" />
+              <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
           </div>
       </div>
 
 </section>
 
 <!--================================================================-->
+
+
+<!-- Tutorial section -->
+<section class="projects-section bg-white" id="Tutorial">
+
+      <div class="container" height="100%">
+          <div class="project-text pt-0 text-lg-left">
+              <h2>Tutorial</h2>
+              <p class="text-black-50 mb-0">
+                To be added.
+              </p>
+              <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
+          </div>
+      </div>
+
+</section>
 
 <!--================================================================-->
 
