--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ function addSuggestion(suggestion){
     <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <img src="images/hand-icon.png" height="25">
-          SignLab 
+          SignLab Amsterdam
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
@@ -361,8 +361,8 @@ function addSuggestion(suggestion){
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Our mission</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Demo</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Mission</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Demos</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Funding">Funding</a></li>
