--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@ function addSuggestion(suggestion){
 
             <br>
             <!-- Defines the button and label displayed for the option "freestyle" -->
-            <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
-            <label for="freestyle" style="margin-right:5px"  data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed.">On-demand avatar translation</label>
+            <input type="radio" id="freestyleDisplay" name="display" value="freestyle" checked onclick="changeFunc(this);">
+            <label for="freestyle" style="margin-right:5px"  data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed.">Avatar translation</label>
            <!--  <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i> -->
 
               <br>
@@ -460,7 +460,7 @@ function addSuggestion(suggestion){
                 </div> -->
                 <!-- <input type="submit"> -->
              <!--  </form> -->
-
+             <br>
 
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
