--- a/index.html
+++ b/index.html
@@ -329,18 +329,6 @@ $(document).ready(function(){
   $('[data-toggle="tooltip"]').tooltip();
 });
 
-function addSuggestion(suggestion){
-  // Requiring fs module in which
-  // writeFile function is defined.
-  const fs = require('fs');
-
-  // Write data in 'suggestions.txt' .
-  fs.appendFile('suggestions.txt', suggestion, (err) => {
-
-      // In case of a error throw err.
-      if (err) throw err;
-  });
-}
 
 </script>
 
@@ -505,7 +493,7 @@ function addSuggestion(suggestion){
               <label for="suggestions">Suggestions box: </label>
               <br>
               <input id="suggestions" class="input" style="margin-top:5px; margin-bottom:10px; width: 400px;">
-             <!--  <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" /> -->
+              <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
         </span>
 
         <!-- <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
