--- a/index.html
+++ b/index.html
@@ -493,8 +493,8 @@ $(document).ready(function(){
               <label for="suggestions">Suggestions box: </label>
               <br>
               <input id="suggestions" class="input" style="margin-top:5px; margin-bottom:10px; width: 400px;">
-              <!-- <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
-        </span> -->
+              <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
+        </span>
 
         <!-- <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
 
